# hyperac

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml  schema.yml
ac/: home_assistant.py  serializers.py  urls.py  views.py
django_project/: settings.py  urls.py
