[project]
name = "hyperac"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.6",
    "djangorestframework>=3.17.1",
    "drf-spectacular[sidecar]>=0.29.0",
    "environs[django]>=15.0.1",
    "gunicorn>=26.0.0",
    "httpx>=0.28.1",
    "markdown>=3.10.2",
    "whitenoise>=6.12.0",
]
